# python-project-lvl1

./: README.md  pyproject.toml
brain_games/scripts/: brain_games.py
