[tool.poetry]
name = "python-project-lvl1"
version = "0.1.0"
description = ""
authors = ["Anton Zhertovskiy <104278585+Anton-Zhert@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
